# readmoo-readdict-helper

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml
scripts/: update_bookmarklet.py
src/: bookmarklet.min.js  readmoo-readdict-helper.js
templates/: index.html
